--- a/index.html
+++ b/index.html
@@ -3,153 +3,210 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Миронов Данил - Python-разработчик</title>
+    <title>Резюме - Миронов Данил</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f7f6;
-            color: #333;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
         }
-        .container {
-            width: 80%;
-            margin: 0 auto;
+
+        body {
+            background-color: #f4f4f4;
             padding: 20px;
         }
-        h1 {
-            color: #00a9a5;
-            font-size: 2.5em;
-            margin-bottom: 10px;
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            animation: slideIn 1.5s ease-out;
         }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #009688;
+            font-size: 32px;
+            text-transform: uppercase;
+        }
+
+        .header-info {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .header-info p {
+            margin-bottom: 10px;
+            font-size: 18px;
+            color: #666;
+        }
+
+        .resume-grid {
+            display: grid;
+            grid-template-columns: 2fr 1fr;
+            gap: 20px;
+        }
+
+        .left-col, .right-col {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 8px;
+        }
+
         .section {
             margin-bottom: 30px;
         }
+
         h2 {
-            color: #00a9a5;
-            font-size: 1.8em;
+            color: #009688;
+            margin-bottom: 10px;
+            font-size: 24px;
+            text-transform: uppercase;
+        }
+
+        p {
+            line-height: 1.6;
+            color: #333;
             margin-bottom: 10px;
         }
-        p, ul {
-            font-size: 1.1em;
-            line-height: 1.6;
-        }
+
         ul {
             list-style-type: none;
-            padding: 0;
         }
-        li::before {
-            content: "•";
-            color: #00a9a5;
-            font-weight: bold;
-            display: inline-block;
-            width: 1em;
-            margin-left: -1em;
-        }
-        .contact, .skills, .qualities {
-            display: inline-block;
-            width: 30%;
-            vertical-align: top;
-            margin-right: 5%;
-        }
-        .contact ul, .skills ul, .qualities ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        .contact ul li, .skills ul li, .qualities ul li {
+
+        li {
             margin-bottom: 10px;
+            color: #555;
         }
-        .contact a {
-            color: #00a9a5;
-            text-decoration: none;
+
+        .progress-bar {
+            width: 100%;
+            background-color: #e0e0e0;
+            height: 8px;
+            border-radius: 4px;
+            margin-bottom: 10px;
+            position: relative;
         }
-        .contact a:hover {
-            text-decoration: underline;
+
+        .progress {
+            background-color: #009688;
+            height: 100%;
+            width: 85%;
+            border-radius: 4px;
+            animation: load 1.5s ease-out;
+        }
+
+        .right-col ul li {
+            padding-left: 20px;
+            position: relative;
+        }
+
+        .right-col ul li::before {
+            content: '•';
+            position: absolute;
+            left: 0;
+            color: #009688;
+        }
+
+        @keyframes load {
+            from {
+                width: 0;
+            }
+            to {
+                width: 85%;
+            }
+        }
+
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
 <body>
+    <div class="container">
+        <h1>Миронов Данил</h1>
+        <div class="header-info">
+            <p>Python-разработчик</p>
+            <p>Минеральные Воды | Возраст: 22 года</p>
+        </div>
+        
+        <div class="resume-grid">
+            <!-- Левая колонка -->
+            <div class="left-col">
+                <div class="section">
+                    <h2>Навыки</h2>
+                    <ul>
+                        <li>Python</li>
+                        <li>PEP 8</li>
+                        <li>Работа с БД: SQL, PostgreSQL, SQLAlchemy, ORM</li>
+                        <li>Работа с HTTP API</li>
+                        <li>Знание библиотеки requests</li>
+                        <li>GIT, GitHub</li>
+                        <li>Юнит-тестирование</li>
+                        <li>Парсинг сайтов</li>
+                        <li>Написание телеграмм-ботов</li>
+                        <li>Работа с JSON</li>
+                    </ul>
+                </div>
 
-<div class="container">
-    <h1>Миронов Данил</h1>
-    <p><strong>Python-разработчик</strong> | Минеральные Воды | 22 года</p>
+                <div class="section">
+                    <h2>Качества</h2>
+                    <ul>
+                        <li>Внимательность</li>
+                        <li>Ответственность</li>
+                        <li>Коммуникабельность</li>
+                        <li>Обучаемость</li>
+                        <li>Аналитическое и творческое мышление</li>
+                        <li>Умение работать в команде</li>
+                        <li>Стремление повышать свои навыки</li>
+                        <li>Любовь к саморазвитию</li>
+                        <li>Умение открывать что-то новое</li>
+                    </ul>
+                </div>
+            </div>
 
-    <div class="section">
-        <h2>Образование</h2>
-        <p><strong>2021:</strong> Среднее спец. ЧПОУ "ПИТ", Компьютерные системы и комплексы (Техник по компьютерным системам)</p>
-    </div>
+            <!-- Правая колонка -->
+            <div class="right-col">
+                <div class="section">
+                    <h2>Образование</h2>
+                    <p>2021 — Среднее спец.: ЧПОУ "ТИТ", Компьютерные системы и комплексы</p>
+                </div>
 
-    <div class="section">
-        <h2>Курсы</h2>
-        <p><strong>2025:</strong> ООО "Нетология", Python-разработчик (расширенный курс)</p>
-    </div>
+                <div class="section">
+                    <h2>Курсы</h2>
+                    <p>2025 — ООО "Нетология", Python-разработчик: расширенный курс</p>
+                </div>
 
-    <div class="section">
-        <h2>Хобби</h2>
-        <p>Написание песен, игра на гитаре, изучение английского языка, создание своих игр на PyGame для развития творческого потенциала и навыков ООП.</p>
-    </div>
+                <div class="section">
+                    <h2>О себе</h2>
+                    <p>Python-программист без опыта работы. Специализируюсь на работе с готовыми API. Владею PostgreSQL и умею взаимодействовать с ней с помощью SQLAlchemy. Имею опыт в написании телеграмм-ботов. Стремлюсь к написанию чистого, оптимизированного и безопасного кода. Постоянно учусь новому и эффективно сотрудничаю с командой.</p>
+                </div>
 
-    <div class="section">
-        <h2>О себе</h2>
-        <p>Python-программист без опыта работы. Специализируюсь на работе с готовыми API. Владею PostgreSQL и умею взаимодействовать с ней с помощью SQLAlchemy. Имею практический опыт в написании телеграмм-ботов. Стремлюсь к написанию чистого, оптимизированного и безопасного кода. Обладаю развитым аналитическим и творческим мышлением, постоянно учусь новому и эффективно сотрудничаю с командой. В данный момент работаю над двумя собственными проектами: Телеграмм-бот с интеграцией ChatGPT и пиксельный платформер на PyGame со своим собственным дизайном и сюжетом. С проектами можно ознакомиться на <a href="https://github.com/WolArt13" target="_blank">GitHub</a>.</p>
-    </div>
+                <div class="section">
+                    <h2>Хобби</h2>
+                    <p>Написание песен. Игра на гитаре. Изучение английского языка. Создание своих игр на PyGame для развития творческого потенциала и навыков ООП.</p>
+                </div>
 
-    <div class="section">
-        <h2>Контакты</h2>
-        <div class="contact">
-            <ul>
-                <li><strong>Телефон:</strong> +7 924 420-46-83</li>
-                <li><strong>Email:</strong> <a href="mailto:danilmironov3101@gmail.com">danilmironov3101@gmail.com</a></li>
-                <li><strong>GitHub:</strong> <a href="https://github.com/WolArt13" target="_blank">github.com/WolArt13</a></li>
-                <li><strong>Telegram:</strong> <a href="https://t.me/Wolart13" target="_blank">@Wolart13</a></li>
-                <li><strong>Гражданство:</strong> Российская Федерация</li>
-                <li><strong>Желаемая зарплата:</strong> 70 000 руб</li>
-                <li><strong>Занятость:</strong> Полная занятость, удаленная работа</li>
-            </ul>
+                <div class="section">
+                    <h2>Контакты</h2>
+                    <p>+7 924 420-46-83</p>
+                    <p>danilmironov3101@gmail.com</p>
+                    <p><a href="https://github.com/WolArt13" target="_blank">github.com/WolArt13</a></p>
+                    <p><a href="https://t.me/Wolart13" target="_blank">t.me/Wolart13</a></p>
+                </div>
+            </div>
         </div>
     </div>
-
-    <div class="section">
-        <h2>Языки</h2>
-        <p>Английский - B1 (Средний)</p>
-    </div>
-
-    <div class="section">
-        <h2>Навыки</h2>
-        <div class="skills">
-            <ul>
-                <li>Python</li>
-                <li>PEP 8</li>
-                <li>PostgreSQL, SQLAlchemy, ORM</li>
-                <li>HTTP API</li>
-                <li>Requests</li>
-                <li>GIT, GitHub</li>
-                <li>Юнит-тестирование</li>
-                <li>Парсинг сайтов</li>
-                <li>Написание телеграмм-ботов</li>
-                <li>JSON</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="section">
-        <h2>Качества</h2>
-        <div class="qualities">
-            <ul>
-                <li>Внимательность</li>
-                <li>Ответственность</li>
-                <li>Коммуникабельность</li>
-                <li>Обучаемость</li>
-                <li>Аналитическое и творческое мышление</li>
-                <li>Умение работать в команде</li>
-                <li>Стремление повышать свои навыки</li>
-                <li>Любовь к саморазвитию</li>
-                <li>Умение находить информацию</li>
-                <li>Навыки работы с ChatGPT</li>
-            </ul>
-        </div>
-    </div>
-</div>
-
 </body>
 </html>
